# pyproject.toml
[project]
name = "mattermost-utilities"
version = "0.1.0"

[tool.black]
line-length = 100  # Default, can be changed
target-version = ['py313'] # Specify Python versions
include = '\.pyi?$' # Regex for files to include
exclude = '''
	/(
		\.git
		| \.hg
		| \.mypy_cache
		| \.tox
		| \.venv
		| _build
		| build
		| dist
	)/
''' # Regex for files/directories to exclude